--- a/web/classMaster/ClassListPage.xhtml
+++ b/web/classMaster/ClassListPage.xhtml
@@ -14,28 +14,17 @@
         <ui:define name="body">
             <h:form>
                     <h:panelGrid columns="2" id="gridPanel1" style="height: 100%; width: 100%">
-                        <h:panelGrid id="gridPanel3" style="width: 100%; height: 100%;">
-                            <h:outputText id="outputText4" style="font-size: 18px; font-weight: bold" value="クラス一覧"/>
-                        </h:panelGrid>
                         <h:panelGrid id="gridPanel2" style="height: 100%; text-align: right; width: 100%">
                             <h:commandButton action="#{classMasterController.newClassButton_action}" id="newClassButton" value="新規クラス作成"/>
                         </h:panelGrid>
                     </h:panelGrid>
-                    <h:panelGrid id="tableGrid" style="width: 50%; height: 100%;" styleClass="tableGrid">
+                    <h:panelGrid id="tableGrid" style="width: 400px; height: 100%;" styleClass="tableGrid">
                         <h:dataTable binding="#{classMasterController.classTable}" id="classTable" styleClass="w"
                                      value="#{classMasterController.classMasterList}" var="currentRow">
                             <h:column id="column1">
-                                <h:outputText id="outputText1" value="#{currentRow.className}"/>
+                                <h:commandLink action="#{classMasterController.editClassLink_action()}" id="editClassLink" style="width: 40px" value="#{currentRow.className}" />
                                 <f:facet name="header">
                                     <h:outputText id="outputText2" value="クラス名"/>
-                                </f:facet>
-                            </h:column>
-                            <h:column id="column2">
-                                <h:commandLink action="#{classMasterController.editClassLink_action()}" id="editClassLink" style="width: 40px">
-                                    <h:outputText id="linkAction1Text" value="修正"/>                                
-                                </h:commandLink>
-                                <f:facet name="header">
-                                    <h:outputText id="outputText3"/>
                                 </f:facet>
                             </h:column>
                         </h:dataTable>
