--- a/web/encounterRecord/List.xhtml
+++ b/web/encounterRecord/List.xhtml
@@ -4,6 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
+    
+    <!-- 使ってない -->
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
